[package]
name = "conformance"
version = "0.0.0"
authors = [
  "Dan Burkert <dan@danburkert.com>",
  "Tokio Contributors <team@tokio.rs>",
]
publish = false
edition = "2021"

[dependencies]
bytes = { version = "1", git = "https://github.com/tokio-rs/bytes", rev = "cb7f844" }
env_logger = { version = "0.10", default-features = false }
prost = { path = "../prost" }
protobuf = { path = "../protobuf" }
tests = { path = "../tests" }
